Fixed the travis.yml file. Added user login, logout and registration

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ cache: bundler
 before_script:
   - export RAILS_ENV=test
   - bundle exec rake db:drop
-  - psql -c 'create database test_food_shop_db;' -U food_shop_db
+  - psql -c 'create database test_food_shop_db;' -U postgres
   - bundle exec rake db:create --all
   - bundle exec rake db:migrate
   - bundle exec rake db:seed
