--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_script:
   - bundle exec rake db:create --all
   - bundle exec rake db:migrate
   - bundle exec rake db:seed
-  - bundle exec rake cucumber
+  # - bundle exec rake cucumber
 notifications:
   email: false
 services:
